# rusty-embedded-training

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
